# cmdmanager

./: cmdmanager.cabal
exe/: cmdmanager.hs
src/: CmdClient.hs  CmdExec.hs  Type.hs  Util.hs  WebLog.hs  World.hs
src/Type/: CmdExec.hs  CmdExecEvent.hs  CmdSet.hs  SubOp.hs  WorldState.hs
