Name:		cmdmanager
Version:	0.0
Synopsis:       Object-oriented programming realization using coroutine 
Description: 	Object-oriented programming realization using coroutine 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:      
Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   mtl>2, 
                   lens == 2.4.*,
                   containers == 0.4.*,
                   transformers == 0.3.*, 
                   transformers-free == 1.0.*, 
                   filepath == 1.3.*,
                   bytestring == 0.9.*,
                   attoparsec == 0.10.*,
                   http-types == 0.7.*,
                   http-conduit == 1.6.*, 
                   aeson == 0.6.*, 
                   safecopy == 0.6.*,
                   uuid == 1.2.*,
                   cereal == 0.3.*,
                   process == 1.1.*,
                   directory == 1.1.*, 
                   weblogger-type == 0.0.*, 
                   coroutine-object >= 0.0.999 && < 0.2

  Other-Modules:   
  exposed-modules:
                   CmdExec
                   WebLog
                   Type


 
Executable cmdmanager
  Main-is: cmdmanager.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   transformers == 0.3.*, 
                   mtl > 2, 
                   coroutine-object >= 0.0.999 && < 0.2,
                   MSSMType >= 0.0.999 && < 0.2,
                   filepath == 1.3.*, 
                   cmdmanager 